MComix 0.95

    - Fixed library freezing up when displaying large amounts of books.
      In addition, changes to cover size and sort order weren't kept
      across program restarts.

    - The "Dynamic background color" option now uses a color that should be
      closer to a page's actual edge color.

MComix 0.94
Release date: 27.09.2011

    - Fixed MComix opening archives in sibling directories
      even when "Automatically open next archive" was disabled.

    - Fixed recursively adding directories to the library not working
      consistently on Win32.

    - Fixed the first command line argument to MComix being ignored on Win32,
      breaking "Open with..." functionality.

    - The library window has been slighly reorganized. All collection-related
      functionality can now be accessed via the right-click popup on the
      collection panel to the left. Similiarily, "Add books" is now on the
      main book panel popup. Additionally, CTRL-SHIFT-A has been set as
      shortcut for this action.

    - Library covers will now be cached after being loaded. This will avoid
      frequent reloading when switching between collections, or when filtering
      books.

    - The magnifying lens can no longer become partially invisible when moving
      around near window edges, and should no longer flicker.

    - MComix automatically switching to next/previous directories can now
      be controlled with a new preference option.

    - Updated French translation. (by Frédéric Chateaux)

MComix 0.93
Release date: 27.08.2011

    - Removing a book from the library while its thumbnail wasn't loaded yet
      would result in a segmentation fault. This issue has been fixed.

    - Fixed sorting in the bookmark edit dialog not working as expected. The
      buttons "Sort ascending" and "Sort descending" have been removed, as
      they did the same as clicking on the "Name" header of the bookmarks
      table. Double-clicking a bookmark will open it.
